--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1406,7 +1406,7 @@ body {
       flex: 0 90%; }
   @media (min-width: 768px) {
     .history-title {
-      margin-top: 0; } }
+      margin-top: 30px; } }
 
 .main-history {
   display: flex;
@@ -1783,6 +1783,7 @@ body {
       font-size: 1.8rem;
       width: 600px; } }
   .the-archive ul li {
+    list-style-type: none;
     padding-left: 30px;
     line-height: inherit; }
     .the-archive ul li a {
@@ -1831,13 +1832,13 @@ body {
   width: 300px;
   height: 60px; }
   .green-bt a {
-    font-family: Noto Sans;
-    font-size: 0.8rem;
+    font-family: "Noto Sans", sans-serif;
     font-weight: 700;
     text-align: center;
     line-height: 28px;
     color: #fff;
-    padding: 10px 25px; }
+    padding: 10px 25px;
+    font-size: 1rem; }
   @media (min-width: 768px) {
     .green-bt {
       width: 400px;
@@ -2536,6 +2537,14 @@ p {
     .teacher-list .teacher-grid .teacher_det {
       text-align: center;
       font-size: 1.375rem; }
+
+#div1 {
+  width: 800px;
+  height: 400px; }
+
+#div2 {
+  width: 800px;
+  height: 400px; }
 
 .red-border-container {
   width: 90%;
