--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -1,287 +1,287 @@
 // past envet section
-.past-event-wrapper {
-    margin: 0 auto;
-    .past-event {
-        border-top: 2px solid #248E6A;
-        margin: 0 60px;
-        .event-years {
-            font-size: 20px;
-            .year {
-                color: #248E6A;
-                ul {
-                    color: #000;
-                    line-height: 5rem;
-                }
-            }
-            //year
-        }
-        //event-years
-    }
-    //past-event
-    @include desktop{
-      display: none;
-    }
-}
-//past-event-wrapper
-// suppoert now section
-.support-section {
-    margin: 0 60px;
-    .title {
-        border-top: 2px solid #248E6A;
-        // margin: 0px 60px;
-    }
-    .image-wrapper {
-        display: inline-flex;
-        p {
-            width: 100%;
-            height: 80px;
-            position: absolute;
-            margin-top: 185px;
-            color: #fff;
-            font-size: 24px;
-            background-color: rgba(0,0,0,.74);
-            text-align: center;
-            padding: 20px;
-        }
-        .first-image {
-            margin: 30px;
-            position: relative;
-            display: flex;
-            z-index: -1;
-            height: auto;
-        }
-        .second-image {
-            margin: 30px;
-            position: relative;
-            display: flex;
-            z-index: -1;
-            height: auto;
-        }
-        .third-image {
-            margin: 30px;
-            position: relative;
-            display: flex;
-            z-index: -1;
-            height: auto;
-        }
-    }
-    .bracket {
-        padding: 0;
-        margin: 10px 0 20px 30px;
-        height: 7rem;
-        @include desktop {
-            margin: 0;
-            min-width: 16rem;
-            height: 8rem;
-        }
-        img {
-            position: relative;
-            height: 100%;
-            width: 100%;
-            padding-top: 0;
-            @include desktop {
-                height: 50px;
-                width: 100%;
-                padding-top: 0;
-                margin-top: 0;
-            }
-        }
-// Variables
-$title-font-size: 1.4em;
-$title-height: 120px;
-$title-width: 270px;
-
-// Colour Schema
-$mainGreen: #AFF1D3;
-$offWhite: #FFF;
-$lightblack: #333;
-$darkGreen: #4FC8A1;
-
-$main-colour: $mainGreen;
-$border-colour: $mainGreen;
-$background-colour: $offWhite;
-$darkBackground-colour: $darkGreen;
-
-$main-text: $lightblack;
-
-
-
-.main-title {
-  padding-left: 2em;
-
-}
-
-#involved-container {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  height: 1200px;
-  border-bottom: 2px solid #4FC8A1;
-  margin-left: 5%;
-  margin-right: 5%;
-
-  #column-left {
-    -webkit-flex: 3;
-    flex: 3;
-    height: 500px;
-    background-color: $background-colour;
-    margin-left: 25px;
-    border-right: 3px solid #4FC8A1;
-    border-radius: 5px;
-    margin-bottom: 5em;
-    flex-direction: column;
-  }
-
-  #column-right {
-    -webkit-flex: 1;
-    flex: 1;
-    background-color: $background-colour;
-    margin-right: 25px;
-    flex-direction: column;
-  }
-
-}
-
-#yearsArchives {
-  text-align: center;
-  padding-left: 40px;
-}
-
-.title-container {
-
-  display: flex;
-  flex: 1;
-  width: 100%;
-  padding-left: 10%; // Reminder to come back and use variables for margins and padding and mobile.
-}
-
-// Three main top green buttons
-.title-link {
-  width: $title-width;
-  height: $title-height;
-  font-size: $title-font-size;
-  padding-top: ($title-height/5);
-  color: $main-text;
-}
-
-.involved-title-box {
-  border-radius: 10px;
-  width: $title-width;
-  height: $title-height;
-  background-color: $mainGreen;
-  margin-right: 4%;
-  flex-direction: column;
-  text-align: center;
-  padding-top: ($title-height/6);
-
-    &:hover {
-      background-color: $darkBackground-colour;
-    }
-}
-
-.interest {
-  width: 280px;
-  height: 60px;
-  border-radius: 10px;
-  background-color: #4FC8A1;
-}
-
-.green-button {
-  color: #FFF;
-  font-size: 1.5em;
-}
-
-.full-width-section {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: column; /* works with row or column */
-  flex-direction: column;
-  align-items: center;
-
-  .full-width-section-item {
-    -webkit-flex: 1;
-    flex: 1;
-    flex-direction: column;
-  }
-}
-
-#sliderImages {
-  width: 100%;
-  text-align: center;
-}
-
-.involved-slider {
-  height: 340px;
-  width: 100%;
-  background-color: #FFF;
-}
-
-#circle-text {
-  vertical-align: middle;
-  color: #FFF;
-}
-
-// This for green circle btn
-#circle-button {
-    width: 200px;
-    height: 200px;
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    -ms-border-radius: 100px;
-    -o-border-radius: 100px;
-    border-radius: 100px;
-    background-color: #4fc8a1;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    color: #fff;
-    font-size: 40px;
-    font-family: Asap;
-    line-height: 35px;
-}
-
-#Donation {
-  width: 100%;
-}
-
-// This for volenteer btn
-.donation-button {
-  width: 320px;
-  height: 60px;
-  background-color: #f76072;
-  border-radius: 6px;
-  font-family: "Noto Sans";
-  font-weight: bold;
-  font-size: 15px;
-  text-align: center;
-  line-height: 40px;
-  color: #fff;
-  padding: 10px;
-  box-shadow: none;
-  text-shadow: none;
-  letter-spacing: 0.8px;
-  text-decoration: none;
-}
-
-.donation-button-group {
-  height: 60px;
-  margin-bottom: 10px;
-}
-
-.re-btn {
-  margin-right: 60px;
-  float: right;
-}
-
-// This for donation
-.pink-btn {
-  margin-left: 60px;
-  float: left;
-}
-
-.button-contact-placeholder {
-  width: 100%;
-  height: 250px;
-  text-align: center;
-}
+// .past-event-wrapper {
+//     margin: 0 auto;
+//     .past-event {
+//         border-top: 2px solid #248E6A;
+//         margin: 0 60px;
+//         .event-years {
+//             font-size: 20px;
+//             .year {
+//                 color: #248E6A;
+//                 ul {
+//                     color: #000;
+//                     line-height: 5rem;
+//                 }
+//             }
+//             //year
+//         }
+//         //event-years
+//     }
+//     //past-event
+//     @include desktop{
+//       display: none;
+//     }
+// }
+// //past-event-wrapper
+// // suppoert now section
+// .support-section {
+//     margin: 0 60px;
+//     .title {
+//         border-top: 2px solid #248E6A;
+//         // margin: 0px 60px;
+//     }
+//     .image-wrapper {
+//         display: inline-flex;
+//         p {
+//             width: 100%;
+//             height: 80px;
+//             position: absolute;
+//             margin-top: 185px;
+//             color: #fff;
+//             font-size: 24px;
+//             background-color: rgba(0,0,0,.74);
+//             text-align: center;
+//             padding: 20px;
+//         }
+//         .first-image {
+//             margin: 30px;
+//             position: relative;
+//             display: flex;
+//             z-index: -1;
+//             height: auto;
+//         }
+//         .second-image {
+//             margin: 30px;
+//             position: relative;
+//             display: flex;
+//             z-index: -1;
+//             height: auto;
+//         }
+//         .third-image {
+//             margin: 30px;
+//             position: relative;
+//             display: flex;
+//             z-index: -1;
+//             height: auto;
+//         }
+//     }
+//     .bracket {
+//         padding: 0;
+//         margin: 10px 0 20px 30px;
+//         height: 7rem;
+//         @include desktop {
+//             margin: 0;
+//             min-width: 16rem;
+//             height: 8rem;
+//         }
+//         img {
+//             position: relative;
+//             height: 100%;
+//             width: 100%;
+//             padding-top: 0;
+//             @include desktop {
+//                 height: 50px;
+//                 width: 100%;
+//                 padding-top: 0;
+//                 margin-top: 0;
+//             }
+//         }
+// // Variables
+// $title-font-size: 1.4em;
+// $title-height: 120px;
+// $title-width: 270px;
+//
+// // Colour Schema
+// $mainGreen: #AFF1D3;
+// $offWhite: #FFF;
+// $lightblack: #333;
+// $darkGreen: #4FC8A1;
+//
+// $main-colour: $mainGreen;
+// $border-colour: $mainGreen;
+// $background-colour: $offWhite;
+// $darkBackground-colour: $darkGreen;
+//
+// $main-text: $lightblack;
+//
+//
+//
+// .main-title {
+//   padding-left: 2em;
+//
+// }
+//
+// #involved-container {
+//   display: -webkit-flex;
+//   display: flex;
+//   -webkit-flex-direction: row;
+//   flex-direction: row;
+//   height: 1200px;
+//   border-bottom: 2px solid #4FC8A1;
+//   margin-left: 5%;
+//   margin-right: 5%;
+//
+//   #column-left {
+//     -webkit-flex: 3;
+//     flex: 3;
+//     height: 500px;
+//     background-color: $background-colour;
+//     margin-left: 25px;
+//     border-right: 3px solid #4FC8A1;
+//     border-radius: 5px;
+//     margin-bottom: 5em;
+//     flex-direction: column;
+//   }
+//
+//   #column-right {
+//     -webkit-flex: 1;
+//     flex: 1;
+//     background-color: $background-colour;
+//     margin-right: 25px;
+//     flex-direction: column;
+//   }
+//
+// }
+//
+// #yearsArchives {
+//   text-align: center;
+//   padding-left: 40px;
+// }
+//
+// .title-container {
+//
+//   display: flex;
+//   flex: 1;
+//   width: 100%;
+//   padding-left: 10%; // Reminder to come back and use variables for margins and padding and mobile.
+// }
+//
+// // Three main top green buttons
+// .title-link {
+//   width: $title-width;
+//   height: $title-height;
+//   font-size: $title-font-size;
+//   padding-top: ($title-height/5);
+//   color: $main-text;
+// }
+//
+// .involved-title-box {
+//   border-radius: 10px;
+//   width: $title-width;
+//   height: $title-height;
+//   background-color: $mainGreen;
+//   margin-right: 4%;
+//   flex-direction: column;
+//   text-align: center;
+//   padding-top: ($title-height/6);
+//
+//     &:hover {
+//       background-color: $darkBackground-colour;
+//     }
+// }
+//
+// .interest {
+//   width: 280px;
+//   height: 60px;
+//   border-radius: 10px;
+//   background-color: #4FC8A1;
+// }
+//
+// .green-button {
+//   color: #FFF;
+//   font-size: 1.5em;
+// }
+//
+// .full-width-section {
+//   display: -webkit-flex;
+//   display: flex;
+//   -webkit-flex-direction: column; /* works with row or column */
+//   flex-direction: column;
+//   align-items: center;
+//
+//   .full-width-section-item {
+//     -webkit-flex: 1;
+//     flex: 1;
+//     flex-direction: column;
+//   }
+// }
+//
+// #sliderImages {
+//   width: 100%;
+//   text-align: center;
+// }
+//
+// .involved-slider {
+//   height: 340px;
+//   width: 100%;
+//   background-color: #FFF;
+// }
+//
+// #circle-text {
+//   vertical-align: middle;
+//   color: #FFF;
+// }
+//
+// // This for green circle btn
+// #circle-button {
+//     width: 200px;
+//     height: 200px;
+//     -webkit-border-radius: 100px;
+//     -moz-border-radius: 100px;
+//     -ms-border-radius: 100px;
+//     -o-border-radius: 100px;
+//     border-radius: 100px;
+//     background-color: #4fc8a1;
+//     margin-left: auto;
+//     margin-right: auto;
+//     text-align: center;
+//     color: #fff;
+//     font-size: 40px;
+//     font-family: Asap;
+//     line-height: 35px;
+// }
+//
+// #Donation {
+//   width: 100%;
+// }
+//
+// // This for volenteer btn
+// .donation-button {
+//   width: 320px;
+//   height: 60px;
+//   background-color: #f76072;
+//   border-radius: 6px;
+//   font-family: "Noto Sans";
+//   font-weight: bold;
+//   font-size: 15px;
+//   text-align: center;
+//   line-height: 40px;
+//   color: #fff;
+//   padding: 10px;
+//   box-shadow: none;
+//   text-shadow: none;
+//   letter-spacing: 0.8px;
+//   text-decoration: none;
+// }
+//
+// .donation-button-group {
+//   height: 60px;
+//   margin-bottom: 10px;
+// }
+//
+// .re-btn {
+//   margin-right: 60px;
+//   float: right;
+// }
+//
+// // This for donation
+// .pink-btn {
+//   margin-left: 60px;
+//   float: left;
+// }
+//
+// .button-contact-placeholder {
+//   width: 100%;
+//   height: 250px;
+//   text-align: center;
+// }
