--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -2,45 +2,55 @@
 # NW Program Page
 --------------------------------------------------------------*/
 // General Setting
+
 * {
 	box-sizing: border-box;
 }
 // @media screen and (max-width: 480px) {
+
 .nw-program-wrapper {
 	height: auto;
 	margin: 0 auto;
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 1.5;
 	align-items: center;
+
 }
+
 fonts h1,
 h2,
 h3 {
 	font-family: $font_title;
 	font-weight: normal;
 }
+
 h1 {
 	font-size: $h1_size_mob;
 	line-height: 2.625rem;
 }
+
 h2 {
 	font-size: $h2_size_mob;
 	line-height: 2.125rem;
 }
+
 h3 {
 	font-size: $h3_size_mob;
 	line-height: 1.6875rem;
 }
+
 p {
 	font-size: 1.625rem;
 	line-height: 2.5rem;
 	font-style: $font_body;
 }
+
 .spcil p {
 	font-size: 1.25rem;
 	line-height: 2.5rem;
 	font-style: $font_main;
 }
+
 .green-btn {
 	background-color: #4FC8A1;
 	color: $white;
@@ -50,6 +60,7 @@ p {
 	text-decoration: none;
 }
 // Section Why NW Program Section
+
 .nw-program {
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin *4.5;
@@ -61,6 +72,7 @@ p {
 			}
 		}
 	}
+
 	.nw-img {
 		display: flex;
 		justify-content: center;
@@ -73,34 +85,43 @@ p {
 		display: flex;
 		flex-direction: row;
 		align-items: flex-start;
+
 		.why-nw {
 			display: block;
 			flex-shrink: 4;
 			text-align: left;
 		}
+
 		.nw-img {
 			margin-top: 2rem;
 			padding-left: 1rem;
 		}
 	}
 }
+
 // Montessori Daily Schedule Section
-.montessori-schedule {
-	@include desktop {
-		display: inline-flex;
+	.schedule-menu{
+		display: flex;
 		flex-direction: row;
-		p {
-			display: inline-block;
-			padding: 5px;
-		}
-		.morning {
-			flex: 50%;
-		}
-		.afternoon {
-			flex: 50%;
+		justify-content: space-between;
+		@media screen and (min-width: 768px) {
+			.schedule-menu{
+				display: hide;
+			}
 		}
 	}
-};
+	.row p{
+		display:inline-block;
+		padding:5px;
+	}
+	.morning{
+		flex: 100%;
+
+	}
+	.afternoon{
+		flex: 100%;
+	}
+
 // Funding Section
 .funding {
 	display: flex;
@@ -108,9 +129,11 @@ p {
 	margin-top: $basic_margin*3;
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin *4.5;
+
 	.funding-det {
 		display: block;
 	}
+
 	.funding-img,
 	.money-spend-img {
 		display: flex;
@@ -120,21 +143,25 @@ p {
 			margin-top: 0;
 		}
 	}
+
 	.money-spend-img img {
 		@include desktop {
 			padding-right: 4rem;
 			padding-left: 0.4rem;
 		}
 	}
+
 	h2 {
 		text-align: center;
 	}
+
 	.nw-part2 {
 		margin: 0 auto;
 		@include desktop {
 			display: flex;
 			flex-direction: row;
 			align-items: center;
+
 			.red-border-container {
 				padding-right: 3.4%;
 				width: 82%;
@@ -160,6 +187,7 @@ p {
 		@include desktop {
 			justify-content: flex-end;
 		}
+
 		.green-btn {
 			padding: 10px;
 			width: 44.666%;
@@ -172,6 +200,7 @@ p {
 	}
 }
 //School List Section
+
 .school-list {
 	display: flex;
 	flex-direction: column;
@@ -179,15 +208,18 @@ p {
 		display: flex;
 		justify-content: center;
 		img {
-<<<<<<< HEAD
-			width: 80%;
-			height: 80%;
-		}
-		.address .phone {
-			font-weight: bolder;
+			width: 55%;
+			height: 70%;
 		}
 	}
 }
+// @include desktop{
+// .school-list{
+// 	flex-direction: row-reverse;
+//
+//   }
+//  }
+
 //Preschools List Section
 .preschools-list {
 	padding: 1px;
@@ -198,13 +230,16 @@ p {
 
 
 //Enrollment Section
+
 .enroll {
 	display: flex;
 	flex-direction: column;
+
 	.enrollment-wrap {
 		@include desktop {
 			display: flex;
 			flex-direction: row;
+
 			.guids {
 				flex-shrink: 3.5;
 				padding-right: 1rem;
@@ -219,9 +254,9 @@ p {
 	// 	@media screen and (min-width: 640px) {
 	// 		margin-top: 8rem;
 	// 	}
-	// 	@media screen and (min-width: 768px) {
-	// 		margin-top: 5rem;
-	// 	}
+		// @media screen and (min-width: 768px) {
+		// 	margin-top: 5rem;
+		// }
 	// 	@include desktop {
 	// 		margin-top: 2rem;
 	// 	}
@@ -231,21 +266,26 @@ p {
 		display: flex;
 		margin: 40px auto;
 		flex-direction: column;
+
 		.enroll-img {
 			margin-bottom: 50px;
 			align-self: center;
 		}
+
 		.enroll-btn {
 			align-self: center;
 		}
 	}
 }
 //teacher list Section
+
 .teacher-list {
 	padding: 2px;
 	flex-wrap: wrap;
 	display: flex;
 	flex-direction: column;
+
+
 	h1 {
 		width: 40%;
 		padding: 1.7rem;
@@ -254,6 +294,7 @@ p {
 	@include desktop {
 		flex-direction: column;
 	}
+
 	.teacher-grid {
 		display: flex;
 		flex-wrap: wrap;
@@ -261,6 +302,7 @@ p {
 		@include desktop {
 			flex-direction: row;
 		}
+
 		.teacher-block {
 			flex: 33%;
 			display: flex;
@@ -271,11 +313,13 @@ p {
 				flex: 1;
 			}
 		}
+
 		.flip-container {
 			display: block;
 			box-shadow: inset 1px 1px 40px 0 rgba(0,0,0,.45);
 			background: #aff1d3;
 			border-radius: 50%;
+
 			.flipper {
 				flex: 1 0 auto;
 				display: flex;
@@ -287,24 +331,29 @@ p {
 				-moz-transform-style: preserve-3d;
 				transition: 1.9s;
 				transform-style: preserve-3d;
+
 				.teacher_det {
 					display: block;
 				}
+
 				p {
 					font-size: 1rem;
 					font-style: italic;
 					line-height: $basic_hline_height*2.4;
 				}
 			}
+
 			.front {
 				position: absolute;
 				background-size: cover;
 				border-radius: 50%;
 				flex: 2;
+
 				img {
 					border-radius: 50%;
 				}
 			}
+
 			.back {
 				border-radius: 50%;
 				position: absolute;
@@ -324,12 +373,14 @@ p {
 				}
 			}
 		}
+
 		.flip-container.hover .flipper,
 		.flip-container:hover .flipper {
 			-webkit-transform: rotateY(180deg);
 			-moz-transform: rotateY(180deg);
 			transform: rotateY(180deg);
 		}
+
 		.back,
 		.flip-container,
 		.front {
@@ -344,25 +395,17 @@ p {
 				height: 200px;
 			}
 		}
+
 		.back,
 		.front {
 			-webkit-backface-visibility: hidden;
 			-moz-backface-visibility: hidden;
 			backface-visibility: hidden;
 		}
+
 		.teacher_det {
 			text-align: center;
 			font-size: $font_member_staff;
 		}
 	}
-}
-////schedule section ////
-
-#div1{
-  width:800px;
-  height:400px;
-}
-#div2{
-  width:800px;
-  height:400px;
 }
