--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -204,3 +204,14 @@ blockquote {
   margin-left: 60px;
   float: left;
 }
+.involved-options-donations {
+  width: 100%;
+  height: 350px;
+  display: none;
+}
+
+.involved-options-volunteer {
+  width: 100%;
+  height: 350px;
+  display: none;
+}
