--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -2103,92 +2103,15 @@ label input {
 
 .main-title {
   padding-left: 2em; }
-.past-event-wrapper {
-  margin: 0 auto; }
-  .past-event-wrapper .past-event {
-    border-top: 2px solid #248E6A;
-    margin: 0 60px; }
-    .past-event-wrapper .past-event .event-years {
-      font-size: 20px; }
-      .past-event-wrapper .past-event .event-years .year {
-        color: #248E6A; }
-        .past-event-wrapper .past-event .event-years .year ul {
-          color: #000;
-          line-height: 5rem; }
-  @media (min-width: 768px) {
-    .past-event-wrapper {
-      display: none; } }
-
-.support-section {
-  margin: 0 60px; }
-  .support-section .title {
-    border-top: 2px solid #248E6A; }
-  .support-section .image-wrapper {
-    display: -ms-inline-flexbox;
-    display: inline-flex; }
-    .support-section .image-wrapper p {
-      width: 100%;
-      height: 80px;
-      position: absolute;
-      margin-top: 185px;
-      color: #fff;
-      font-size: 24px;
-      background-color: rgba(0, 0, 0, 0.74);
-      text-align: center;
-      padding: 20px; }
-    .support-section .image-wrapper .first-image {
-      margin: 30px;
-      position: relative;
-      display: -ms-flexbox;
-      display: flex;
-      z-index: -1;
-      height: auto; }
-    .support-section .image-wrapper .second-image {
-      margin: 30px;
-      position: relative;
-      display: -ms-flexbox;
-      display: flex;
-      z-index: -1;
-      height: auto; }
-    .support-section .image-wrapper .third-image {
-      margin: 30px;
-      position: relative;
-      display: -ms-flexbox;
-      display: flex;
-      z-index: -1;
-      height: auto; }
-  .support-section .bracket {
-    padding: 0;
-    margin: 10px 0 20px 30px;
-    height: 7rem; }
-    @media (min-width: 768px) {
-      .support-section .bracket {
-        margin: 0;
-        min-width: 16rem;
-        height: 8rem; } }
-    .support-section .bracket img {
-      position: relative;
-      height: 100%;
-      width: 100%;
-      padding-top: 0; }
-      @media (min-width: 768px) {
-        .support-section .bracket img {
-          height: 50px;
-          width: 100%;
-          padding-top: 0;
-          margin-top: 0; } }
-.main-title {
-  padding-left: 2em; }
 
 #involved-container {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: row;
       flex-direction: row;
-  height: 1200px;
-  border-bottom: 2px solid #4FC8A1;
   margin-left: 5%;
-  margin-right: 5%; }
+  margin-right: 5%;
+  margin-bottom: 5%; }
   #involved-container #column-left {
     -ms-flex: 3;
         flex: 3;
@@ -2207,6 +2130,12 @@ label input {
     margin-right: 25px;
     -ms-flex-direction: column;
         flex-direction: column; }
+
+#involved-support-now {
+  width: 100%;
+  border-bottom: 3px solid #4FC8A1;
+  height: 200px;
+  float: left; }
 
 #yearsArchives {
   text-align: center;
@@ -2240,7 +2169,27 @@ label input {
   .involved-title-box:hover {
     background-color: #4FC8A1; }
 
+blockquote {
+  font-size: 1.1em;
+  border-left: 10px solid #D93B57;
+  padding-left: 20px;
+  height: 3em; }
+  blockquote blockquote p {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: column;
+        flex-flow: column; }
+
+#involved-titles-container {
+  padding-bottom: 100px; }
+
 .interest {
+  width: 280px;
+  height: 60px;
+  border-radius: 10px;
+  background-color: #4FC8A1; }
+
+.involved-interview {
   width: 280px;
   height: 60px;
   border-radius: 10px;
@@ -2266,7 +2215,9 @@ label input {
 
 #sliderImages {
   width: 100%;
-  text-align: center; }
+  text-align: center;
+  margin-top: 1%;
+  position: relative; }
 
 .involved-slider {
   height: 340px;
@@ -2322,10 +2273,16 @@ label input {
   margin-left: 60px;
   float: left; }
 
-.button-contact-placeholder {
+.involved-options-donations {
   width: 100%;
-  height: 250px;
-  text-align: center; }
+  height: 350px;
+  display: none; }
+
+.involved-options-volunteer {
+  width: 100%;
+  height: 350px;
+  display: none; }
+
 /*--------------------------------------------------------------
 # NW Program Page
 --------------------------------------------------------------*/
@@ -2405,6 +2362,7 @@ p {
     .nw-part1 .nw-img {
       margin-top: 2rem;
       padding-left: 1rem; } }
+
 .montessori-schedule #div1 .targetDiv {
   width: 400px;
   height: 700px;
@@ -2414,6 +2372,7 @@ p {
   width: 400px;
   height: 700px;
   background-color: green; }
+
 .schedule-menu {
   display: -ms-flexbox;
   display: flex;
@@ -2436,6 +2395,7 @@ p {
 .afternoon {
   -ms-flex: 100%;
       flex: 100%; }
+
 .funding {
   display: -ms-flexbox;
   display: flex;
@@ -2521,7 +2481,11 @@ p {
         justify-content: center; }
     .school-list .school-img img {
       width: 55%;
-      height: 70%; }
+      height: 70%;
+      width: 80%;
+      height: 80%; }
+    .school-list .school-img .address .phone {
+      font-weight: bolder; }
 
 .preschools-list {
   padding: 1px; }
