--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -12,6 +12,7 @@
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 1.5;
 	align-items: center;
+	background-color: grey;
 
 }
 
@@ -93,45 +94,20 @@ p {
 }
 
 // Montessori Daily Schedule Section
-.montessori-schedule{
+.row p{
+	display:inline-block;
+	padding:5px;
+}
 
-	#div1 .targetDiv{
-  width:400px;
-  height:700px;
-	background-color: red;
-}
-#div2 .targetDiv{
-  width:400px;
-  height:700px;
-	background-color: green;
-}
-// 	display:inline-flex;
-// 	flex-direction: row;
-// 	p{
-// 		display:inline-block;
-// 		padding:5px;
-// }
-// 	.morning{
-// 		flex: 50%;
-// 	}
-// 	.afternoon{
-// 		flex: 50%;
-// 	}
-}
 	.schedule-menu{
 		display: flex;
-		flex-direction: row;
 		justify-content: space-between;
-		@media screen and (min-width: 768px) {
-			.schedule-menu{
-				display: hide;
-			}
-		}
-	}
-	.row p{
-		display:inline-block;
-		padding:5px;
-	}
+		// @media screen and (min-width: 768px) {
+		// 	.schedule-menu{
+		// 		display: hide;
+		// 	}
+		// }
+}
 	.morning{
 		flex: 100%;
 
@@ -215,8 +191,7 @@ p {
 				width: 18%;
 			}
 		}
-	}
-}
+  }
 //School List Section
 
 .school-list {
@@ -230,18 +205,19 @@ p {
 			height: 70%;
 			width: 80%;
 			height: 80%;
+		   }
 		}
 		.address .phone {
 			font-weight: bolder;
 		}
-	}
+
 }
 // @include desktop{
 // .school-list{
 // 	flex-direction: row-reverse;
 //
 //   }
-//  }
+ }
 
 //Preschools List Section
 .preschools-list {
@@ -250,8 +226,6 @@ p {
 		margin: 0 auto;
 	 }
   }
-
-
 //Enrollment Section
 
 .enroll {
@@ -269,21 +243,6 @@ p {
 			}
 		}
 	}
-	// .enroll-info {
-	// 	margin-top: 27rem;
-	// 	@media screen and (min-width: 450px) {
-	// 		margin-top: 17rem;
-	// 	}
-	// 	@media screen and (min-width: 640px) {
-	// 		margin-top: 8rem;
-	// 	}
-		// @media screen and (min-width: 768px) {
-		// 	margin-top: 5rem;
-		// }
-	// 	@include desktop {
-	// 		margin-top: 2rem;
-	// 	}
-	// }
 	.enroll-block {
 		max-width: 70%;
 		display: flex;
