--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -6,14 +6,13 @@
 * {
 	box-sizing: border-box;
 }
+
 .nw-program-wrapper {
 	height: auto;
 	margin: 0 auto;
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 1.5;
 	align-items: center;
-	background-color: grey;
-
 }
 
 fonts h1,
@@ -94,6 +93,7 @@ p {
 }
 
 // Montessori Daily Schedule Section
+// Montessori Daily Schedule Section
 .row p{
 	display:inline-block;
 	padding:5px;
@@ -115,6 +115,8 @@ p {
 	.afternoon{
 		flex: 100%;
 	}
+
+
 
 // Funding Section
 .funding {
@@ -191,7 +193,8 @@ p {
 				width: 18%;
 			}
 		}
-  }
+	}
+}
 //School List Section
 
 .school-list {
@@ -203,21 +206,15 @@ p {
 		img {
 			width: 55%;
 			height: 70%;
-			width: 80%;
-			height: 80%;
-		   }
 		}
-		.address .phone {
-			font-weight: bolder;
-		}
-
+	}
 }
 // @include desktop{
 // .school-list{
 // 	flex-direction: row-reverse;
 //
 //   }
- }
+//  }
 
 //Preschools List Section
 .preschools-list {
@@ -226,6 +223,8 @@ p {
 		margin: 0 auto;
 	 }
   }
+
+
 //Enrollment Section
 
 .enroll {
@@ -243,6 +242,21 @@ p {
 			}
 		}
 	}
+	// .enroll-info {
+	// 	margin-top: 27rem;
+	// 	@media screen and (min-width: 450px) {
+	// 		margin-top: 17rem;
+	// 	}
+	// 	@media screen and (min-width: 640px) {
+	// 		margin-top: 8rem;
+	// 	}
+	// 	@media screen and (min-width: 768px) {
+	// 		margin-top: 5rem;
+	// 	}
+	// 	@include desktop {
+	// 		margin-top: 2rem;
+	// 	}
+	// }
 	.enroll-block {
 		max-width: 70%;
 		display: flex;
@@ -253,6 +267,7 @@ p {
 			margin-bottom: 50px;
 			align-self: center;
 		}
+
 		.enroll-btn {
 			align-self: center;
 		}
@@ -376,12 +391,14 @@ p {
 				height: 200px;
 			}
 		}
+
 		.back,
 		.front {
 			-webkit-backface-visibility: hidden;
 			-moz-backface-visibility: hidden;
 			backface-visibility: hidden;
 		}
+
 		.teacher_det {
 			text-align: center;
 			font-size: $font_member_staff;
