fine tune on  what is montessori page

--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -16,8 +16,8 @@ $color_background_body: #fff;
 $color_text_main: #404040;
 $color_mobile_clicked_green: #125A50;
 $color_text-screen: #21759b;
-/********* Colours **********/
-//Montessori Brand Colours//
+/********* Colors **********/
+//Montessori Brand Colors//
 $border_left_red: #D93B57;
 $border_left_red: #D93B57;
 $color_btn_orange: #F76072;
