--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -3,14 +3,11 @@
 .masthead {
 	position: absolute;
 }
-
 .site-content {
 	padding-top: 180px;
 	top: 0;
 }
-
 .home .site-content {
-
 	padding-top: 80px;
 	@include desktop {
 		padding-top: 150px;
@@ -21,18 +18,18 @@
 .home .the-page-title{
 	display:none;
 }
-
 .the-page-title {
+	position: relative;
 	background-color: #fff;
-    height: 45px;
-    padding: 0 30px;
-
+	height: 21px;
+	padding: 0 32px;
+	margin: 0 ;
 	ul {
+		margin: 0;
 		@include flex(center,space-between) ;
 		flex-direction: row;
 		justify-content: space-between;
 		position: relative;
-
 		li {
 			display: inline-block;
 			a{
@@ -49,27 +46,21 @@
 .main-navigation-container {
 	display: flex;
 }
-
 .main-navigation {
 	padding-top: 40px;
 	margin-right: 38px;
 }
-
 div .menu-primary-menu-container {
 	width: 100%;
 }
-
 .main-navigation {
 	min-width: 70%;
 }
-
 .menu-primary-menu-container {
 	display: none;
-
 	ul {
 		li {
 			display: inline-block;
-
 			a:hover {
 				border-top: 6px solid #57B79F;
 				color: #57B79F;
@@ -78,7 +69,6 @@ div .menu-primary-menu-container {
 		}
 	}
 }
-
 .main-navigation-container {
 	width: 100%;
 	background-color: $white;
@@ -89,7 +79,6 @@ div .menu-primary-menu-container {
 	height: 8rem; //
 	padding: 0 15px; //
 }
-
 .menu-primary-menu-container {
 	@include desktop{
 		font-size: 1.3rem;
@@ -97,11 +86,9 @@ div .menu-primary-menu-container {
 	@include desktop {
 		white-space: nowrap;
 		display: inline-block;
-
 		ul {
 			li {
 				display: inline;
-
 				a {
 					text-transform: uppercase;
 					text-decoration: none;
@@ -121,12 +108,10 @@ div .menu-primary-menu-container {
 .responsive-menu-button {
 	margin-top: 0.1rem !important;
 }
-
 .responsive-menu-box {
 	width: 34px!important;
 	height: 22px!important;
 }
-
 .responsive-menu-inner,
 .responsive-menu-inner::after,
 .responsive-menu-inner::before {
@@ -134,19 +119,16 @@ div .menu-primary-menu-container {
 	width: 34px!important;
 	height: 4px!important;
 }
-
 button,
 input[type="button"] {
 	box-shadow: none !important;
 }
-
 button#responsive-menu-button {
 	top: 12px!important;
 right: 6%!important;
 background-color: transparent!important;
 	background-color: transparent!important;
 }
-
 #primary-menu li.current-menu-item {
 	a {
 		border-top: 6px solid #57B79F;
@@ -168,7 +150,6 @@ background-color: transparent!important;
 		min-width: 16rem;
 		height: 8rem;
 	}
-
 	img {
 		position: relative;
 		height: 100%;
@@ -180,7 +161,6 @@ background-color: transparent!important;
 			padding-top: 0;
 			margin-top: 0;
 		}
-
 		a {
 			bottom: -20px;
 			cursor: pointer;
@@ -202,7 +182,6 @@ background-color: transparent!important;
 		height: 120px;
 	}
 }
-
 .site-header {
 	z-index: 999;
 	min-width: 380px;
@@ -214,7 +193,6 @@ background-color: transparent!important;
 	};
 	top: 0;
 }
-
 .home .site-header {
 	padding-top: 0;
 	position: absolute;
@@ -232,7 +210,6 @@ background-color: transparent!important;
 		};
 	}
 }
-
 div {
 	.secondary li a {
 		line-height: 2.3rem;
@@ -254,25 +231,20 @@ div .secondary {
 	text-align: center;
 	padding-right: 5px;
 	background-color: #248E6A;
-
 	& .active {
 		background-color: $color_btn_green;
 	}
-
 	ul { @include desktop{
 		display: fixed;
 	}
-
 		min-width: 50%;
 	}
-
 	li {
 		display: inline-block;
 		padding: 8px 0px;
 		@include desktop {
 	 padding: 16.4px 0px;
 		};
-
 		a {
 			color: white;
 			padding: 0 20px;
@@ -286,13 +258,10 @@ div .secondary {
 		}
 	}
 }
-
 div .secondary a{
 	display: inline-block;
-
 	border-left: solid 1px white;
 }
-
 div .secondary
 {
  li:first-child a{
@@ -302,13 +271,12 @@ li:nth-child(2) a{
  border-left: none;
 }
 }
-
 //// menu pop-up  mobile size on scroll///
+
  div .transparent-menu{
 	position: fixed;
 	 @include desktop{
 		display: inline-block;
 	};
 	background-color: $white;
-
 }
