--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -7,10 +7,9 @@
     width: 100%;
     flex-wrap: wrap;
     margin-left: 30px;
-
 }
 .history-title {
-    margin-top: 100px;
+    margin-top: 70px;
     @include desktop{
         margin-top:30px;
     }
@@ -26,7 +25,6 @@
         }
     }
     @include flex(flex-end,space-between);
-
     .history-img1 {
        display: block;
 
@@ -40,12 +38,11 @@
             display: none;
         };
     }
-
     .history-img {
         display: none;
         @include desktop {
             display: block;
-            margin-top: 100px;
+            margin-top: 70px;
             align-self: flex-end;
             padding-bottom: 100px;
             img{
@@ -60,7 +57,6 @@
     blockquote {
         text-align: left;
     }
-
     p {
         width: 100%;
         text-align: left;
@@ -68,7 +64,6 @@
         overflow: hidden;
     }
     width: 100%;
-
     blockquote {
         width: 100%;
     }
@@ -96,7 +91,6 @@
     div {
         width: 100%;
     }
-
     .philosophy-grid {
         flex: 0 0 auto;
         width: 200px;
@@ -119,7 +113,6 @@
             transition: 0.8s;
             transform-style: preserve-3d;
             @include border-radius(10px);
-
             &:hover {
                 @include rotate(180deg);
             }
@@ -135,7 +128,6 @@
             position: relative;
             width: 100%;
             height: 200px;
-
             img {
                 position: absolute;
                 top: 46px;
@@ -151,7 +143,6 @@
                 }
             }
         }
-
         h2 {
             z-index: 1;
             margin: 0;
@@ -165,7 +156,6 @@
             line-height: 0.9rem;
             right: 22px;
             position: absolute;
-
             a {
                 color: #248E6A;
                 font-size: 1.1rem;
@@ -222,17 +212,14 @@
         flex-direction: row-reverse;
     }
 }
-
 .main-materials div:nth-of-type(1) {
     img {
         display: none;
     }
-
     .materials-contents {
         width: 90%;
     }
 }
-
 .materials {
     width: 100%;
     display: flex;
@@ -243,7 +230,6 @@
         flex-direction: row;
         flex-wrap: wrap;
     }
-
     img {
         width: 400px;
         height: 400px;
@@ -254,7 +240,6 @@
         }
     }
 }
-
 .materials-contents {
     blockquote {
         p {
@@ -266,7 +251,6 @@
         width: 60%;
         min-width: 50%;
         @include quote {}
-
         p {
             display: inline;
             padding-top: 4px;
@@ -283,7 +267,6 @@
     list-style-type: disc;
     @include desktop {};
 }
-
 .first-benefits-section {
     width: 100%;
     min-width: 80%;
@@ -293,7 +276,6 @@
     @include desktop {
         flex-direction: row;
     }
-
     img {
         width: 400px;
         height: 400px;
@@ -306,14 +288,12 @@
         }
     }
 }
-
 .benefits-content {
     width: 100%;
     @include desktop {
          @include quote{}
     }
 }
-
 .benefits-title {
     p {
         padding-top: 4px;
@@ -334,7 +314,6 @@
         padding-left: 30px;
         line-height: inherit;
         font-size: 1.6rem;
-
         a {
             color: $color_btn_hover_green;
         }
@@ -355,12 +334,10 @@
         font-size: 1.8rem;
         width: 600px;
     };
-
     li {
         list-style-type: none;
         padding-left: 30px;
         line-height: inherit;
-
         a {
             color: $color_btn_hover_green;
             font-size: 1.2rem;
@@ -370,16 +347,15 @@
         }
     }
 }
-
 .montessori-archive {
     border-top: solid 3px $color_btn_green;
     padding-top: 12px;
     margin-top: 40px;
     width: 65%;
-
     h3 {
         @include desktop {
             width: 600px;
+            font-size: 1.8rem;
         };
     }
 }
@@ -395,18 +371,17 @@
     color: green;
     padding-left: 10px;
 }
-
 .fa-angle-down {
     color: green;
     padding-left: 10px;
 }
 /******** Start Resources Section ********/
+
 .main-resources {
     border-bottom: none;
     height: 400px;
     position: relative;
 }
-
 .green-bt {
     background-color: $color_btn_green;
     @include border-radius (6px);
@@ -429,7 +404,6 @@
         width: 400px;
         height: 65px;
         font-size: 20px;
-
         a {
             font-size: 1.1rem;
         }
